--- a/govuk_frontend_jinja/templates/components/input/macro.html
+++ b/govuk_frontend_jinja/templates/components/input/macro.html
@@ -20,7 +20,7 @@
   {% set describedBy = describedBy + ' ' + hintId if describedBy else hintId %}
   {{ govukHint({
     'id': hintId,
-    'classes': (params.hint.classes if params.hint and params.hint.classes),
+    'classes': params.hint.classes,
     'attributes': params.hint.attributes,
     'html': params.hint.html,
     'text': params.hint.text
@@ -39,15 +39,15 @@
   }) | indent(2) | trim }}
 {% endif %}
 
-{%- if params.prefix or params.suffix %}<div class="govuk-input__wrapper">{% endif -%}
+  {%- if params.prefix or params.suffix %}<div class="govuk-input__wrapper">{% endif -%}
 
-  {%- if params.prefix and (params.prefix.text or params.prefix.html) %}
+    {%- if params.prefix and (params.prefix.text or params.prefix.html) %}
     <div class="govuk-input__prefix {{- ' ' + params.prefix.classes if params.prefix.classes }}" aria-hidden="true" {%- for attribute, value in (params.prefix.attributes.items() if params.prefix.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
       {{- params.prefix.html | safe if params.prefix.html else params.prefix.text -}}
     </div>
   {% endif -%}
 
-  <input class="govuk-input {%- if params.classes %} {{ params.classes }}{% endif %} {%- if params.errorMessage %} govuk-input--error{% endif %}" id="{{ params.id }}" name="{{ params.name }}" type="{{ params.type | default('text') }}"
+  <input class="govuk-input {%- if params.classes %} {{ params.classes }}{% endif %} {%- if params.errorMessage %} govuk-input--error{% endif %}" id="{{ params.id }}" name="{{ params.name }}" type="{{ params.type | default("text", true) }}"
   {%- if (params.spellcheck == false) or (params.spellcheck == true) %} spellcheck="{{ params.spellcheck | lower }}"{% endif %}
   {%- if params.value %} value="{{ params.value}}"{% endif %}
   {%- if params.disabled %} disabled{% endif %}
@@ -64,6 +64,6 @@
   {% endif -%}
 
 {%- if params.prefix or params.suffix %}</div>{% endif %}
-</div>
 
+</div>
 {% endmacro %}
