--- a/govuk_frontend_jinja/templates/components/cookie-banner/macro.html
+++ b/govuk_frontend_jinja/templates/components/cookie-banner/macro.html
@@ -1,18 +1,13 @@
 {% macro govukCookieBanner (params) %}
 {% from "govuk_frontend_jinja/components/button/macro.html" import govukButton -%}
 
-<div class="govuk-cookie-banner {{ params.classes if params.classes }}" data-nosnippet role="region" aria-label="{{ params.ariaLabel | default("Cookie banner", true) }}"
+<div class="govuk-cookie-banner {%- if params.classes %} {{ params.classes }}{% endif %}" data-nosnippet role="region" aria-label="{{ params.ariaLabel | default("Cookie banner", true) }}"
   {%- if params.hidden %} hidden{% endif %}
-  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
+  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
 
   {%- for message in params.messages %}
-    {% set classNames = "govuk-cookie-banner__message govuk-width-container" %}
-    {% if message.classes %}
-      {% set classNames = classNames + " " + message.classes %}
-    {% endif %}
-
-    <div class="{{classNames}}" {%- if message.role %} role="{{message.role}}"{% endif %}
-    {%- for attribute, value in (message.attributes.items() if message.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}
+    <div class="govuk-cookie-banner__message {%- if message.classes %} {{ message.classes }}{% endif %} govuk-width-container" {%- if message.role %} role="{{ message.role }}"{% endif %}
+    {%- for attribute, value in (message.attributes.items() if message.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}
     {%- if message.hidden %} hidden{% endif %}>
 
     <div class="govuk-grid-row">
@@ -50,11 +45,7 @@
                 "attributes": action.attributes
               }) | indent(12) | trim }}
             {% else %}
-              {% set linkClasses = "govuk-link" %}
-              {% if action.classes %}
-                {% set linkClasses = linkClasses + " " + action.classes %}
-              {% endif %}
-              <a class="{{ linkClasses }}" href="{{ action.href }}" {%- for attribute, value in (action.attributes.items() if action.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>{{ action.text }}</a>
+              <a class="govuk-link {%- if action.classes %} {{ action.classes }}{% endif %}" href="{{ action.href }}" {%- for attribute, value in (action.attributes.items() if action.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>{{ action.text }}</a>
             {% endif %}
           {% else %}
             {{ govukButton({
