--- a/govuk_frontend_jinja/templates/components/label/macro.html
+++ b/govuk_frontend_jinja/templates/components/label/macro.html
@@ -1,12 +1,12 @@
 {% macro govukLabel(params) %}
 {% if params.html or params.text %}
 {% set labelHtml %}
-<label class="govuk-label{%- if params.classes %} {{ params.classes }}{% endif %}"
-  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}
+<label class="govuk-label {%- if params.classes %} {{ params.classes }}{% endif %}"
+  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}
   {%- if params.for %} for="{{ params.for }}"{% endif %}>
   {{ params.html | safe if params.html else params.text }}
 </label>
-{% endset %}
+{% endset -%}
 
 {% if params.isPageHeading %}
 <h1 class="govuk-label-wrapper">{{ labelHtml | safe | indent(2) }}</h1>
