--- a/govuk_frontend_jinja/templates/components/phase-banner/macro.html
+++ b/govuk_frontend_jinja/templates/components/phase-banner/macro.html
@@ -2,7 +2,7 @@
 {% from "govuk_frontend_jinja/components/tag/macro.html" import govukTag -%}
 
 <div class="govuk-phase-banner
-  {%- if params.classes %} {{ params.classes }}{% endif %}"{% for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+  {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
   <p class="govuk-phase-banner__content">
     {{ govukTag({
       'text': params.tag.text if params.tag and params.tag.text,
@@ -14,5 +14,4 @@
     </span>
   </p>
 </div>
-
 {% endmacro %}
