--- a/govuk_frontend_jinja/templates/components/task-list/macro.html
+++ b/govuk_frontend_jinja/templates/components/task-list/macro.html
@@ -1,7 +1,8 @@
 {% macro govukTaskList(params) %}
-{% from "govuk_frontend_jinja/components/tag/macro.html" import govukTag -%}
+{% from "govuk_frontend_jinja/components/tag/macro.html" import govukTag %}
 
-{% set idPrefix = params.idPrefix if params.idPrefix else "task-list" %}
+{%- set idPrefix = params.idPrefix if params.idPrefix else "task-list" -%}
+
 <ul class="govuk-task-list {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
   {% for item in params['items'] %}
     {%- set hintId = idPrefix + "-" ~ loop.index + "-hint" -%}
