--- a/govuk_frontend_jinja/templates/components/warning-text/macro.html
+++ b/govuk_frontend_jinja/templates/components/warning-text/macro.html
@@ -1,6 +1,6 @@
 {% macro govukWarningText(params) %}
-<div class="govuk-warning-text {{- ' ' + params.classes if params.classes}}"
-  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor -%}
+<div class="govuk-warning-text {%- if params.classes %} {{ params.classes }}{% endif %}"
+  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor -%}
   >
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
   <strong class="govuk-warning-text__text">
