--- a/govuk_frontend_jinja/templates/components/tabs/macro.html
+++ b/govuk_frontend_jinja/templates/components/tabs/macro.html
@@ -3,7 +3,7 @@
   instead. We need this for error messages and hints as well -#}
 {% set idPrefix = params.idPrefix if params.idPrefix -%}
 
-<div {%- if params.id %} id="{{params.id}}"{% endif %} class="govuk-tabs {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %} data-module="govuk-tabs">
+<div {%- if params.id %} id="{{ params.id }}"{% endif %} class="govuk-tabs {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %} data-module="govuk-tabs">
   <h2 class="govuk-tabs__title">
     {{ params.title | default ("Contents") }}
   </h2>
@@ -12,9 +12,9 @@
     {% for item in params['items'] %}
       {% if item %}
         {% set id = item.id if item.id else idPrefix + "-" ~ loop.index %}
-        <li class="govuk-tabs__list-item{% if loop.index == 1 %} govuk-tabs__list-item--selected{% endif %}">
+        <li class="govuk-tabs__list-item {%- if loop.index == 1 %} govuk-tabs__list-item--selected{% endif %}">
           <a class="govuk-tabs__tab" href="#{{ id }}"
-            {%- for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
+            {%- for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
             {{ item.label }}
           </a>
         </li>
@@ -26,7 +26,7 @@
     {% for item in params['items'] %}
       {% if item %}
         {% set id = item.id if item.id else idPrefix + "-" ~ loop.index %}
-        <div class="govuk-tabs__panel{% if loop.index > 1 %} govuk-tabs__panel--hidden{% endif %}" id="{{ id }}"{% for attribute, value in (item.panel.attributes.items() if item.panel.attributes else {}.items()) %} {{attribute}}="{{value}}"{% endfor %}>
+        <div class="govuk-tabs__panel {%- if loop.index > 1 %} govuk-tabs__panel--hidden{% endif %}" id="{{ id }}" {%- for attribute, value in (item.panel.attributes.items() if item.panel.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
           {% if item.panel.html %}
             {{ item.panel.html | safe }}
           {% elif item.panel.text %}
