--- a/govuk_frontend_jinja/templates/components/cookie-banner/macro.html
+++ b/govuk_frontend_jinja/templates/components/cookie-banner/macro.html
@@ -43,7 +43,7 @@
                 "classes": action.classes,
                 "href": action.href,
                 "attributes": action.attributes
-              }) | indent(12) | trim }}
+              }) | trim | indent(12) }}
             {% else %}
               <a class="govuk-link {%- if action.classes %} {{ action.classes }}{% endif %}" href="{{ action.href }}" {%- for attribute, value in (action.attributes.items() if action.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>{{ action.text }}</a>
             {% endif %}
@@ -55,7 +55,7 @@
               "type": action.type,
               "classes": action.classes,
               "attributes": action.attributes
-            }) | indent(12) | trim }}
+            }) | trim | indent(12) }}
           {% endif %}
         {% endfor %}
       </div>
