--- a/govuk_frontend_jinja/templates/components/character-count/macro.html
+++ b/govuk_frontend_jinja/templates/components/character-count/macro.html
@@ -72,6 +72,7 @@
     'errorMessage': params.errorMessage,
     'attributes': params.attributes
   }) }}
+
   {%- set textareaDescriptionLength = params.maxwords or params.maxlength %}
   {%- set textareaDescriptionText = params.textareaDescriptionText or 'You can enter up to %{count} ' + ('words' if params.maxwords else 'characters') %}
   {#-
@@ -83,6 +84,6 @@
     'text': ((textareaDescriptionText) | replace('%{count}', textareaDescriptionLength) if not hasNoLimit),
     'id': params.id + '-info',
     'classes': 'govuk-character-count__message' + (' ' + params.countMessage.classes if params.countMessage and params.countMessage.classes else '')
-  }) }}
+  }) | trim | indent(2) }}
 </div>
 {% endmacro %}
