phase banner updates

--- a/govuk_frontend_jinja/templates/components/phase-banner/macro.html
+++ b/govuk_frontend_jinja/templates/components/phase-banner/macro.html
@@ -8,7 +8,7 @@
       'text': params.tag.text if params.tag and params.tag.text,
       'html': params.tag.html if params.tag and params.tag.html,
       'classes': "govuk-phase-banner__content__tag" + (" " + params.tag.classes if params.tag and params.tag.classes else '')
-    }) | indent(4) | trim }}
+    }) | trim | indent(4) }}
     <span class="govuk-phase-banner__text">
       {{ params.html | safe if params.html else params.text }}
     </span>
