--- a/govuk_frontend_jinja/templates/components/radios/macro.html
+++ b/govuk_frontend_jinja/templates/components/radios/macro.html
@@ -14,6 +14,9 @@
   aria-describedby – for example hints or error messages -#}
 {% set ns.describedBy = params.fieldset.describedBy if params.fieldset and params.fieldset.describedBy else "" %}
 
+{#- fieldset is false by default -#}
+{% set hasFieldset = true if params.fieldset else false %}
+
 {#- Capture the HTML so we can optionally nest it in a fieldset -#}
 {% set innerHtml %}
 {% if params.hint %}
@@ -25,7 +28,7 @@
     'attributes': params.hint.attributes,
     'html': params.hint.html,
     'text': params.hint.text
-  }) | indent(2) | trim }}
+  }) | trim | indent(2) }}
 {% endif %}
 {% if params.errorMessage %}
   {% set errorId = idPrefix + '-error' %}
@@ -37,7 +40,7 @@
     'html': params.errorMessage.html,
     'text': params.errorMessage.text,
     'visuallyHiddenText': params.errorMessage.visuallyHiddenText
-  }) | indent(2) | trim }}
+  }) | trim | indent(2) }}
 {% endif %}
   <div class="govuk-radios {%- if params.classes %} {{ params.classes }}{% endif %}"
     {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %} data-module="govuk-radios">
@@ -58,8 +61,8 @@
         {%- if item.divider %}
         <div class="govuk-radios__divider">{{ item.divider }}</div>
         {%- else %}
-        {% set isChecked = item.checked | default((item.value == params.value and item.checked != False) if params.value else false, true) %}
-        {% set hasHint = True if item.hint and (item.hint.text or item.hint.html) %}
+        {% set isChecked = item.checked | default((item.value == params.value and item.checked != false) if params.value else false, true) %}
+        {% set hasHint = true if item.hint and (item.hint.text or item.hint.html) %}
         {% set itemHintId = id + '-item-hint' %}
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="{{ id }}" name="{{ params.name }}" type="radio" value="{{ item.value }}"
@@ -74,7 +77,7 @@
             'classes': 'govuk-radios__label' + (' ' + item.label.classes if item.label and item.label.classes else ''),
             'attributes': item.label.attributes if item.label,
             'for': id
-          }) | indent(6) | trim }}
+          }) | trim | indent(6) }}
           {% if hasHint %}
           {{ govukHint({
             'id': itemHintId,
@@ -82,7 +85,7 @@
             'attributes': item.hint.attributes,
             'html': item.hint.html,
             'text': item.hint.text
-          }) | indent(6) | trim }}
+          }) | trim | indent(6) }}
           {% endif %}
         </div>
         {% if item.conditional and item.conditional.html %}
@@ -96,18 +99,17 @@
   </div>
 {% endset -%}
 
-<div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}">
-{% if params.fieldset %}
-  {% call govukFieldset({
+<div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}" {%- for attribute, value in (params.formGroup.attributes.items() if params.formGroup and params.formGroup.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+{% if hasFieldset %}
+  {{ govukFieldset({
     'describedBy': ns.describedBy,
     'classes': params.fieldset.classes,
     'attributes': params.fieldset.attributes,
-    'legend': params.fieldset.legend
-  }) %}
-  {{ innerHtml | trim | safe }}
-  {% endcall %}
+    'legend': params.fieldset.legend,
+    'html': innerHtml | trim
+  }) | trim | indent(2) }}
 {% else %}
-  {{ innerHtml | trim | safe }}
+  {{ innerHtml | safe | trim }}
 {% endif %}
 </div>
 {% endmacro %}
