--- a/govuk_frontend_jinja/templates/components/back-link/macro.html
+++ b/govuk_frontend_jinja/templates/components/back-link/macro.html
@@ -1,4 +1,8 @@
 {% macro govukBackLink(params) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
+
 <a href="{% if params.href %}{{ params.href }}{% else %}#{% endif %}" class="govuk-back-link {%- if params.classes %} {{ params.classes }}{% endif %}"
-  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>{{ (params.html | safe if params.html else (params.text if params.text else 'Back')) }}</a>
+  {{- govukAttributes(params.attributes) }}>
+  {{- params.html | safe if params.html else (params.text if params.text else "Back") -}}
+</a>
 {% endmacro %}
