--- a/govuk_frontend_jinja/templates/components/breadcrumbs/macro.html
+++ b/govuk_frontend_jinja/templates/components/breadcrumbs/macro.html
@@ -1,21 +1,23 @@
 {% macro govukBreadcrumbs(params) %}
-{# Set classes for this component #}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes %}
+
+{#- Set classes for this component #}
 {%- set classNames = "govuk-breadcrumbs" -%}
 
 {% if params.classes %}
-  {% set classNames = classNames + " " + params.classes %}
+  {% set classNames = classNames ~ " " ~ params.classes %}
 {% endif -%}
 
 {% if params.collapseOnMobile %}
-  {% set classNames = classNames + " govuk-breadcrumbs--collapse-on-mobile" %}
+  {% set classNames = classNames ~ " govuk-breadcrumbs--collapse-on-mobile" %}
 {% endif -%}
 
-<div class="{{ classNames }}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+<div class="{{ classNames }}" {{- govukAttributes(params.attributes) }}>
   <ol class="govuk-breadcrumbs__list">
 {% for item in params['items'] %}
   {% if item.href %}
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="{{ item.href }}" {%- for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+      <a class="govuk-breadcrumbs__link" href="{{ item.href }}" {{- govukAttributes(item.attributes) }}>
         {{- item.html | safe if item.html else item.text -}}
       </a>
     </li>
