--- a/govuk_frontend_jinja/templates/components/character-count/macro.html
+++ b/govuk_frontend_jinja/templates/components/character-count/macro.html
@@ -54,12 +54,12 @@
   {{ govukTextarea({
     'id': params.id,
     'name': params.name,
-    'describedBy': params.id + '-info',
+    'describedBy': params.id ~ '-info',
     'rows': params.rows,
     'spellcheck': params.spellcheck,
     'value': params.value,
     'formGroup': params.formGroup,
-    'classes': 'govuk-js-character-count' + (' ' + params.classes if params.classes else ''),
+    'classes': 'govuk-js-character-count' ~ (' ' ~ params.classes if params.classes else ''),
     'label': {
       'html': params.label.html,
       'text': params.label.text,
@@ -74,7 +74,7 @@
   }) }}
 
   {%- set textareaDescriptionLength = params.maxwords or params.maxlength %}
-  {%- set textareaDescriptionText = params.textareaDescriptionText or 'You can enter up to %{count} ' + ('words' if params.maxwords else 'characters') %}
+  {%- set textareaDescriptionText = params.textareaDescriptionText or 'You can enter up to %{count} ' ~ ('words' if params.maxwords else 'characters') %}
   {#-
     If the limit is set in JavaScript, we won't be able to interpolate the message
     until JavaScript, so we only set a text if the `maxlength` or `maxwords` options
@@ -82,8 +82,8 @@
   #}
   {{ govukHint({
     'text': ((textareaDescriptionText) | replace('%{count}', textareaDescriptionLength) if not hasNoLimit),
-    'id': params.id + '-info',
-    'classes': 'govuk-character-count__message' + (' ' + params.countMessage.classes if params.countMessage and params.countMessage.classes else '')
+    'id': params.id ~ '-info',
+    'classes': 'govuk-character-count__message' ~ (' ' ~ params.countMessage.classes if params.countMessage and params.countMessage.classes else '')
   }) | trim | indent(2) }}
 </div>
 {% endmacro %}
