--- a/govuk_frontend_jinja/templates/components/checkboxes/macro.html
+++ b/govuk_frontend_jinja/templates/components/checkboxes/macro.html
@@ -1,4 +1,5 @@
 {% macro govukCheckboxes(params) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes %}
 {% from "govuk_frontend_jinja/components/error-message/macro.html" import govukErrorMessage %}
 {% from "govuk_frontend_jinja/components/fieldset/macro.html" import govukFieldset %}
 {% from "govuk_frontend_jinja/components/hint/macro.html" import govukHint %}
@@ -20,11 +21,58 @@
 {#- fieldset is false by default -#}
 {% set hasFieldset = true if params.fieldset else false %}
 
+{%- macro _checkboxItem(params, item, index) %}
+  {#- If the user explicitly sets an id, use this instead of the regular idPrefix -#}
+  {#- The first id should not have a number suffix so it's easy to link to from the error summary component -#}
+  {% set itemId = item.id if item.id else idPrefix ~ ("-" ~ index if index > 1 else "") %}
+  {% set itemName = item.name if item.name else params.name %}
+  {% set conditionalId = "conditional-" ~ itemId %}
+  {%- if item.divider %}
+    <div class="govuk-checkboxes__divider">{{ item.divider }}</div>
+  {% else %}
+    {% set isChecked = item.checked | default((item.value in params.get('values', []) and item.checked != false) if params.values else false, true) %}
+    {% set hasHint = true if item.hint and (item.hint.text or item.hint.html) %}
+    {% set itemHintId = itemId ~ "-item-hint" if hasHint else "" %}
+    {% set itemDescribedBy = ns.describedBy if not hasFieldset else "" %}
+    {% set itemDescribedBy = (itemDescribedBy ~ " " ~ itemHintId) | trim %}
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="{{ itemId }}" name="{{ itemName }}" type="checkbox" value="{{ item.value }}"
+        {{-" checked" if isChecked }}
+        {{-" disabled" if item.disabled }}
+        {%- if item.conditional and item.conditional.html %} data-aria-controls="{{ conditionalId }}"{% endif -%}
+        {%- if item.behaviour %} data-behaviour="{{ item.behaviour }}"{% endif -%}
+        {%- if itemDescribedBy %} aria-describedby="{{ itemDescribedBy }}"{% endif -%}
+        {{- govukAttributes(item.attributes) }}>
+      {{ govukLabel({
+        'html': item.html,
+        'text': item.text,
+        'classes': 'govuk-checkboxes__label' ~ (' ' ~ item.label.classes if item.label and item.label.classes else ''),
+        'attributes': item.label.attributes if item.label,
+        'for': itemId
+      }) | trim | indent(6) }}
+      {% if hasHint %}
+      {{ govukHint({
+        'id': itemHintId,
+        'classes': 'govuk-checkboxes__hint' ~ (' ' ~ item.hint.classes if item.hint and item.hint.classes else ''),
+        'attributes': item.hint.attributes if item.hint,
+        'html': item.hint.html,
+        'text': item.hint.text
+      }) | trim | indent(6) }}
+      {% endif %}
+    </div>
+    {% if item.conditional and item.conditional.html %}
+    <div class="govuk-checkboxes__conditional {%- if not isChecked %} govuk-checkboxes__conditional--hidden{% endif %}" id="{{ conditionalId }}">
+      {{ item.conditional.html | safe | trim | indent(6) }}
+    </div>
+    {% endif %}
+  {% endif %}
+{% endmacro -%}
+
 {#- Capture the HTML so we can optionally nest it in a fieldset -#}
 {% set innerHtml %}
 {% if params.hint %}
-  {% set hintId = idPrefix + '-hint' %}
-  {% set ns.describedBy = ns.describedBy + ' ' + hintId if ns.describedBy else hintId %}
+  {% set hintId = idPrefix ~ '-hint' %}
+  {% set ns.describedBy = ns.describedBy ~ ' ' ~ hintId if ns.describedBy else hintId %}
   {{ govukHint({
     'id': hintId,
     'classes': params.hint.classes,
@@ -34,8 +82,8 @@
   }) | trim | indent(2) }}
 {% endif %}
 {% if params.errorMessage %}
-  {% set errorId = idPrefix + '-error' %}
-  {% set ns.describedBy = ns.describedBy + ' ' + errorId if ns.describedBy else errorId %}
+  {% set errorId = idPrefix ~ '-error' %}
+  {% set ns.describedBy = ns.describedBy ~ ' ' ~ errorId if ns.describedBy else errorId %}
   {{ govukErrorMessage({
     'id': errorId,
     'classes': params.errorMessage.classes,
@@ -46,67 +94,23 @@
   }) | trim | indent(2) }}
 {% endif %}
   <div class="govuk-checkboxes {%- if params.classes %} {{ params.classes }}{% endif %}"
-    {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %} data-module="govuk-checkboxes">
+    {{- govukAttributes(params.attributes) }} data-module="govuk-checkboxes">
+    {% if params.formGroup and params.formGroup.beforeInputs %}
+    {{ params.formGroup.beforeInputs.html | safe | trim | indent(4) if params.formGroup.beforeInputs.html else params.formGroup.beforeInputs.text }}
+    {% endif %}
     {% for item in params['items'] %}
       {% if item %}
-        {#- If the user explicitly sets an id, use this instead of the regular idPrefix -#}
-        {%- if item.id -%}
-          {%- set id = item.id -%}
-        {%- else -%}
-          {#- The first id should not have a number suffix so it's easy to link to from the error summary component -#}
-          {%- if loop.first -%}
-            {%- set id = idPrefix %}
-          {% else %}
-            {%- set id = idPrefix + "-" ~ loop.index -%}
-          {%- endif -%}
-        {%- endif -%}
-        {% set name = item.name if item.name else params.name %}
-        {% set conditionalId = "conditional-" + id %}
-        {%- if item.divider %}
-          <div class="govuk-checkboxes__divider">{{ item.divider }}</div>
-        {%- else %}
-          {% set isChecked = item.checked | default((item.value in params.get('values', []) and item.checked != false) if params.values else false, true) %}
-          {% set hasHint = true if item.hint and (item.hint.text or item.hint.html) %}
-          {% set itemHintId = id + "-item-hint" if hasHint else "" %}
-          {% set itemDescribedBy = ns.describedBy if not hasFieldset else "" %}
-          {% set itemDescribedBy = (itemDescribedBy + " " + itemHintId) | trim %}
-          <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="{{ id }}" name="{{ name }}" type="checkbox" value="{{ item.value }}"
-            {{-" checked" if isChecked }}
-            {{-" disabled" if item.disabled }}
-            {%- if item.conditional and item.conditional.html %} data-aria-controls="{{ conditionalId }}"{% endif -%}
-            {%- if item.behaviour %} data-behaviour="{{ item.behaviour }}"{% endif -%}
-            {%- if itemDescribedBy %} aria-describedby="{{ itemDescribedBy }}"{% endif -%}
-            {%- for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
-            {{ govukLabel({
-              'html': item.html,
-              'text': item.text,
-              'classes': 'govuk-checkboxes__label' + (' ' + item.label.classes if item.label and item.label.classes else ''),
-              'attributes': item.label.attributes if item.label,
-              'for': id
-            }) | trim | indent(6) }}
-            {% if hasHint %}
-            {{ govukHint({
-              'id': itemHintId,
-              'classes': 'govuk-checkboxes__hint' + (' ' + item.hint.classes if item.hint.classes else ''),
-              'attributes': item.hint.attributes,
-              'html': item.hint.html,
-              'text': item.hint.text
-            }) | trim | indent(6) }}
-            {% endif %}
-          </div>
-          {% if item.conditional and item.conditional.html %}
-            <div class="govuk-checkboxes__conditional {%- if not isChecked %} govuk-checkboxes__conditional--hidden{% endif %}" id="{{ conditionalId }}">
-              {{ item.conditional.html | safe }}
-            </div>
-          {% endif %}
-        {% endif %}
+        {{- _checkboxItem(params, item, loop.index) -}}
       {% endif %}
     {% endfor %}
+    {% if params.formGroup and params.formGroup.afterInputs %}
+    {{ params.formGroup.afterInputs.html | safe | trim | indent(4) if params.formGroup.afterInputs.html else params.formGroup.afterInputs.text }}
+    {% endif %}
   </div>
 {% endset -%}
 
-<div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}" {%- for attribute, value in (params.formGroup.attributes.items() if params.formGroup and params.formGroup.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+<div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}"
+  {{- govukAttributes(params.formGroup.attributes if params.formGroup) }}>
 {% if hasFieldset %}
   {{ govukFieldset({
     'describedBy': ns.describedBy,
