--- a/govuk_frontend_jinja/templates/components/date-input/macro.html
+++ b/govuk_frontend_jinja/templates/components/date-input/macro.html
@@ -1,4 +1,5 @@
 {% macro govukDateInput(params) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes %}
 {% from "govuk_frontend_jinja/components/error-message/macro.html" import govukErrorMessage %}
 {% from "govuk_frontend_jinja/components/fieldset/macro.html" import govukFieldset %}
 {% from "govuk_frontend_jinja/components/hint/macro.html" import govukHint %}
@@ -34,8 +35,8 @@
 {#- Capture the HTML so we can optionally nest it in a fieldset -#}
 {% set innerHtml %}
 {% if params.hint %}
-  {% set hintId = params.id + "-hint" %}
-  {% set ns.describedBy = ns.describedBy + " " + hintId if ns.describedBy else hintId %}
+  {% set hintId = params.id ~ "-hint" %}
+  {% set ns.describedBy = ns.describedBy ~ " " ~ hintId if ns.describedBy else hintId %}
   {{ govukHint({
     'id': hintId,
     'classes': params.hint.classes,
@@ -45,8 +46,8 @@
   }) | trim | indent(2) }}
 {% endif %}
 {% if params.errorMessage %}
-  {% set errorId = params.id + "-error" %}
-  {% set ns.describedBy = ns.describedBy + " " + errorId if ns.describedBy else errorId %}
+  {% set errorId = params.id ~ "-error" %}
+  {% set ns.describedBy = ns.describedBy ~ " " ~ errorId if ns.describedBy else errorId %}
   {{ govukErrorMessage({
     'id': errorId,
     'classes': params.errorMessage.classes,
@@ -57,8 +58,11 @@
   }) | trim | indent(2) }}
 {% endif %}
   <div class="govuk-date-input {%- if params.classes %} {{ params.classes }}{% endif %}"
-    {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}
+    {{- govukAttributes(params.attributes) -}}
     {%- if params.id %} id="{{ params.id }}"{% endif %}>
+    {% if params.formGroup and params.formGroup.beforeInputs %}
+    {{ params.formGroup.beforeInputs.html | safe | trim | indent(4) if params.formGroup.beforeInputs.html else params.formGroup.beforeInputs.text }}
+    {% endif %}
     {% for item in dateInputItems %}
     <div class="govuk-date-input__item">
       {{ govukInput({
@@ -66,9 +70,9 @@
           'text': item.label if item.label else item.name | capitalize,
           'classes': "govuk-date-input__label"
         },
-        'id': item.id if item.id else (params.id + "-" + item.name),
-        'classes': "govuk-date-input__input " + (item.classes if item.classes else ''),
-        'name': (params.namePrefix + "-" + item.name) if params.namePrefix else item.name,
+        'id': item.id if item.id else (params.id ~ "-" ~ item.name),
+        'classes': "govuk-date-input__input " ~ (item.classes if item.classes),
+        'name': (params.namePrefix ~ "-" ~ item.name) if params.namePrefix else item.name,
         'value': item.value,
         'type': "text",
         'inputmode': item.inputmode if item.inputmode else "numeric",
@@ -77,11 +81,14 @@
         'attributes': item.attributes
       }) | trim | indent(6) }}
     </div>
-  {% endfor %}
+    {% endfor %}
+    {% if params.formGroup and params.formGroup.afterInputs %}
+    {{ params.formGroup.afterInputs.html | safe | trim | indent(4) if params.formGroup.afterInputs.html else params.formGroup.afterInputs.text }}
+    {% endif %}
   </div>
 {% endset -%}
 
-<div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}" {%- for attribute, value in (params.formGroup.attributes.items() if params.formGroup and params.formGroup.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+<div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup and params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}" {{- govukAttributes(params.formGroup.attributes if params.formGroup) }}>
 {% if hasFieldset %}
   {# We override the fieldset's role to 'group' because otherwise JAWS does not
     announce the description for a fieldset comprised of text inputs, but
