--- a/govuk_frontend_jinja/templates/components/hint/macro.html
+++ b/govuk_frontend_jinja/templates/components/hint/macro.html
@@ -1,6 +1,8 @@
 {% macro govukHint(params) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
+
 <div {%- if params.id %} id="{{ params.id }}"{% endif %} class="govuk-hint {%- if params.classes %} {{ params.classes }}{% endif %}"
-{%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+  {{- govukAttributes(params.attributes) }}>
   {{ params.html | safe | trim | indent(2) if params.html else params.text }}
 </div>
 {% endmacro %}
