--- a/govuk_frontend_jinja/templates/components/inset-text/macro.html
+++ b/govuk_frontend_jinja/templates/components/inset-text/macro.html
@@ -1,6 +1,8 @@
 {% macro govukInsetText(params) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
+
 <div {%- if params.id %} id="{{ params.id }}"{% endif %} class="govuk-inset-text {%- if params.classes %} {{ params.classes }}{% endif %}"
-{%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
-  {{ caller() if caller else (params.html | safe if params.html else params.text) }}
+  {{- govukAttributes(params.attributes) }}>
+  {{ caller() if caller else (params.html | safe | trim | indent(2) if params.html else params.text) }}
 </div>
 {% endmacro %}
