--- a/govuk_frontend_jinja/templates/components/label/macro.html
+++ b/govuk_frontend_jinja/templates/components/label/macro.html
@@ -1,8 +1,10 @@
 {% macro govukLabel(params) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
+
 {% if params.html or params.text %}
 {% set labelHtml %}
 <label class="govuk-label {%- if params.classes %} {{ params.classes }}{% endif %}"
-  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}
+  {{- govukAttributes(params.attributes) -}}
   {%- if params.for %} for="{{ params.for }}"{% endif %}>
   {{ params.html | safe | trim | indent(2) if params.html else params.text }}
 </label>
