--- a/govuk_frontend_jinja/templates/components/panel/macro.html
+++ b/govuk_frontend_jinja/templates/components/panel/macro.html
@@ -1,14 +1,17 @@
 {% macro govukPanel(params) %}
-{% set headingLevel = params.headingLevel if params.headingLevel else 1 %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
+
+{% set headingLevel = params.headingLevel if params.headingLevel else 1 -%}
+
 <div class="govuk-panel govuk-panel--confirmation
   {%- if params.classes %} {{ params.classes }}{% endif %}"
-  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+  {{- govukAttributes(params.attributes) }}>
   <h{{ headingLevel }} class="govuk-panel__title">
     {{ params.titleHtml | safe if params.titleHtml else params.titleText }}
   </h{{ headingLevel }}>
   {% if caller or params.html or params.text %}
   <div class="govuk-panel__body">
-    {{ caller() if caller else (params.html | safe if params.html else params.text) }}
+    {{ caller() if caller else (params.html | safe | trim | indent(4) if params.html else params.text) }}
   </div>
   {% endif %}
 </div>
