--- a/govuk_frontend_jinja/templates/components/phase-banner/macro.html
+++ b/govuk_frontend_jinja/templates/components/phase-banner/macro.html
@@ -1,16 +1,18 @@
 {% macro govukPhaseBanner(params) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes %}
 {% from "govuk_frontend_jinja/components/tag/macro.html" import govukTag -%}
 
 <div class="govuk-phase-banner
-  {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
+  {%- if params.classes %} {{ params.classes }}{% endif %}"
+  {{- govukAttributes(params.attributes) }}>
   <p class="govuk-phase-banner__content">
     {{ govukTag({
       'text': params.tag.text if params.tag and params.tag.text,
       'html': params.tag.html if params.tag and params.tag.html,
-      'classes': "govuk-phase-banner__content__tag" + (" " + params.tag.classes if params.tag and params.tag.classes else '')
+      'classes': "govuk-phase-banner__content__tag" ~ (" " ~ params.tag.classes if params.tag and params.tag.classes else '')
     }) | trim | indent(4) }}
     <span class="govuk-phase-banner__text">
-      {{ params.html | safe if params.html else params.text }}
+      {{ params.html | safe | trim | indent(6) if params.html else params.text }}
     </span>
   </p>
 </div>
