--- a/govuk_frontend_jinja/templates/components/skip-link/macro.html
+++ b/govuk_frontend_jinja/templates/components/skip-link/macro.html
@@ -1,5 +1,8 @@
 {% macro govukSkipLink(params) %}
-<a href="{{ params.href | default("#content", true) }}" class="govuk-skip-link {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %} data-module="govuk-skip-link">
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
+
+<a href="{{ params.href | default("#content", true) }}" class="govuk-skip-link {%- if params.classes %} {{ params.classes }}{% endif %}"
+  {{- govukAttributes(params.attributes) }} data-module="govuk-skip-link">
   {{- params.html | safe if params.html else params.text -}}
 </a>
 {% endmacro %}
