--- a/govuk_frontend_jinja/templates/components/tabs/macro.html
+++ b/govuk_frontend_jinja/templates/components/tabs/macro.html
@@ -1,40 +1,50 @@
 {% macro govukTabs(params) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes %}
+
+{%- macro _tabListItem(params, item, index) %}
+{% set tabPanelId = item.id if item.id else idPrefix ~ "-" ~ index -%}
+<li class="govuk-tabs__list-item {%- if index == 1 %} govuk-tabs__list-item--selected{% endif %}">
+  <a class="govuk-tabs__tab" href="#{{ tabPanelId }}"
+    {{- govukAttributes(item.attributes) }}>
+    {{ item.label }}
+  </a>
+</li>
+{% endmacro -%}
+
+{%- macro _tabPanel(params, item, index) %}
+{% set tabPanelId = item.id if item.id else idPrefix ~ "-" ~ index -%}
+<div class="govuk-tabs__panel {%- if index > 1 %} govuk-tabs__panel--hidden{% endif %}" id="{{ tabPanelId }}"
+  {{- govukAttributes(item.panel.attributes) }}>
+{% if item.panel.html %}
+  {{ item.panel.html | safe | trim | indent(2) }}
+{% elif item.panel.text %}
+  <p class="govuk-body">{{ item.panel.text }}</p>
+{% endif %}
+</div>
+{% endmacro -%}
+
 {#- If an id 'prefix' is not passed, fall back to using the name attribute
   instead. We need this for error messages and hints as well -#}
 {% set idPrefix = params.idPrefix if params.idPrefix -%}
 
-<div {%- if params.id %} id="{{ params.id }}"{% endif %} class="govuk-tabs {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %} data-module="govuk-tabs">
+<div {%- if params.id %} id="{{ params.id }}"{% endif %} class="govuk-tabs {%- if params.classes %} {{ params.classes }}{% endif %}"
+  {{- govukAttributes(params.attributes) }} data-module="govuk-tabs">
   <h2 class="govuk-tabs__title">
     {{ params.title | default ("Contents") }}
   </h2>
-  {% if 'items' in params and params['items'] | length %}
+{% if 'items' in params and params['items'] | length %}
   <ul class="govuk-tabs__list">
     {% for item in params['items'] %}
       {% if item %}
-        {% set id = item.id if item.id else idPrefix + "-" ~ loop.index %}
-        <li class="govuk-tabs__list-item {%- if loop.index == 1 %} govuk-tabs__list-item--selected{% endif %}">
-          <a class="govuk-tabs__tab" href="#{{ id }}"
-            {%- for attribute, value in (item.attributes.items() if item.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
-            {{ item.label }}
-          </a>
-        </li>
+        {{- _tabListItem(params, item, loop.index) | trim | indent(4, true) }}
       {% endif %}
     {% endfor %}
   </ul>
-  {% endif %}
-  {% if 'items' in params and params['items'] | length %}
-    {% for item in params['items'] %}
-      {% if item %}
-        {% set id = item.id if item.id else idPrefix + "-" ~ loop.index %}
-        <div class="govuk-tabs__panel {%- if loop.index > 1 %} govuk-tabs__panel--hidden{% endif %}" id="{{ id }}" {%- for attribute, value in (item.panel.attributes.items() if item.panel.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
-          {% if item.panel.html %}
-            {{ item.panel.html | safe }}
-          {% elif item.panel.text %}
-            <p class="govuk-body">{{ item.panel.text }}</p>
-          {% endif %}
-        </div>
-      {% endif %}
-    {% endfor %}
-  {% endif %}
+  {% for item in params['items'] %}
+    {% if item %}
+      {{- _tabPanel(params, item, loop.index) | trim | indent(2, true) }}
+    {% endif %}
+  {% endfor %}
+{% endif %}
 </div>
 {% endmacro %}
