--- a/govuk_frontend_jinja/templates/components/tag/macro.html
+++ b/govuk_frontend_jinja/templates/components/tag/macro.html
@@ -1,5 +1,8 @@
 {% macro govukTag(params) %}
-<strong class="govuk-tag {%- if params.classes %} {{ params.classes }}{% endif %}" {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor %}>
-  {{ params.html | safe if params.html else params.text }}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
+
+<strong class="govuk-tag {%- if params.classes %} {{ params.classes }}{% endif %}"
+  {{- govukAttributes(params.attributes) }}>
+  {{ params.html | safe | trim | indent(2) if params.html else params.text }}
 </strong>
 {% endmacro %}
