--- a/govuk_frontend_jinja/templates/components/warning-text/macro.html
+++ b/govuk_frontend_jinja/templates/components/warning-text/macro.html
@@ -1,7 +1,8 @@
 {% macro govukWarningText(params) %}
+{% from "govuk_frontend_jinja/macros/attributes.html" import govukAttributes -%}
+
 <div class="govuk-warning-text {%- if params.classes %} {{ params.classes }}{% endif %}"
-  {%- for attribute, value in (params.attributes.items() if params.attributes else {}.items()) %} {{ attribute }}="{{ value }}"{% endfor -%}
-  >
+  {{- govukAttributes(params.attributes) }}>
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
   <strong class="govuk-warning-text__text">
     <span class="govuk-visually-hidden">{{ params.iconFallbackText | default("Warning", true) }}</span>
