--- a/govuk_frontend_jinja/templates/components/textarea/macro.html
+++ b/govuk_frontend_jinja/templates/components/textarea/macro.html
@@ -44,7 +44,7 @@
   {{ params.formGroup.beforeInput.html | safe | trim | indent(2) if params.formGroup and  params.formGroup.beforeInput.html else params.formGroup.beforeInput.text }}
 {% endif %}
   <textarea class="govuk-textarea {%- if params.errorMessage %} govuk-textarea--error{% endif %} {%- if params.classes %} {{ params.classes }}{% endif %}" id="{{ params.id }}" name="{{ params.name }}" rows="{{ params.rows | default(5, true) }}"
-  {%- if (params.spellcheck == false) or (params.spellcheck == true) %} spellcheck="{{ params.spellcheck | lower }}"{% endif %}
+  {%- if (params.spellcheck is false) or (params.spellcheck is true) %} spellcheck="{{ params.spellcheck | lower }}"{% endif %}
   {%- if params.disabled %} disabled{% endif %}
   {%- if describedBy %} aria-describedby="{{ describedBy }}"{% endif %}
   {%- if params.autocomplete %} autocomplete="{{ params.autocomplete }}"{% endif %}
