--- a/govuk_frontend_jinja/templates/components/checkboxes/macro.html
+++ b/govuk_frontend_jinja/templates/components/checkboxes/macro.html
@@ -30,7 +30,7 @@
   {%- if item.divider %}
     <div class="govuk-checkboxes__divider">{{ item.divider }}</div>
   {% else %}
-    {% set isChecked = item.checked | default((item.value in params.get('values', []) and item.checked != false) if params.values else false, true) %}
+    {% set isChecked = item.checked | default((item.value in params.get('values', []) and item.checked is not false) if params.values else false, true) %}
     {% set hasHint = true if item.hint and (item.hint.text or item.hint.html) %}
     {% set itemHintId = itemId ~ "-item-hint" if hasHint else "" %}
     {% set itemDescribedBy = ns.describedBy if not hasFieldset else "" %}
