--- a/govuk_frontend_jinja/templates/components/select/macro.html
+++ b/govuk_frontend_jinja/templates/components/select/macro.html
@@ -54,7 +54,7 @@
         {#- Allow selecting by text content (the value for an option when no value attribute is specified) #}
         {%- set effectiveValue = item.value | default(item.text) %}
         <option {%- if item.value is not undefined %} value="{{ item.value | lower }}"{% endif %}
-          {{-" selected" if item.selected | default((effectiveValue == params.value and item.selected != false) if params.value else false, true) }}
+          {{-" selected" if item.selected | default((effectiveValue == params.value and item.selected is not false) if params.value else false, true) }}
           {{-" disabled" if item.disabled }}
           {{- govukAttributes(item.attributes) }}>
           {{- item.text -}}
